# envzilla

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: autoversion.yml  publish.yml
src/envzilla/: __init__.py  cli.py
tests/: conftest.py  test_basic.py  test_create.py
